fixed spacing issue on labels in info section on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,4 +436,8 @@ section.three-column .sort-placeholder {
     .listing-date-col {
         padding: 0.2rem 0.2rem 0;
     }
+
+    .info-label {
+        padding-left: 0;
+    }
 }
